--- a/server/client/src/components/CodeSection.css
+++ b/server/client/src/components/CodeSection.css
@@ -1,5 +1,5 @@
 .code-section {
-    min-height: 200px;
+    margin: 0 auto;
 }
 
 .live-section {
@@ -8,7 +8,6 @@
     align-items: center;
     justify-content: center;
     margin-top: 20px;
-    width: 30%;
 }
 
 h6 {
